Various GUI fixes: - font - alignment - back button - background color...

--- a/public/stylesheets/mainarea.css
+++ b/public/stylesheets/mainarea.css
@@ -1,12 +1,16 @@
 /* USI Channels App */
 
+@font-face{
+	font-family: frutiger;
+	src: url('FrutigerLTStd-Light.otf');
+}
+
 html, body{
     padding: 0;
    	margin: 0;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
-	background-color: RGB(245,128,37);
 	cursor: none;
 	user-select: none;
 	-webkit-user-select: none;
@@ -14,7 +18,6 @@ html, body{
 
 /* title bar */
 #titlebar{
-	background-color: RGB(245,128,37);
 	top: 0;
 	left: 0;
 	height: 10%;
@@ -32,7 +35,7 @@ html, body{
 #titlebarboxlogo{
 	width: 100px;
 	height: 100%;
-	margin-left: 5%;
+	margin-left: 2%;
 	float: left;
 	overflow: hidden;
 }
@@ -42,20 +45,23 @@ html, body{
 }
 
 #titlebarboxname{
-	width: 55%;
+	width: 81.3%;
 	height: 80%;
 	margin-left: 0px;
 	float: left;
-	background-color: RGB(245,128,37);
 }
 
 #titlebarboxnametext{
-	font-family: arial, helvetica;
+	font-family: frutiger;
 	font-weight: bold;
 	color: white;
 	margin-left: 35px;
 	margin-top: 20px;
-	font-size: 55px;
+	font-size: 65px;
+}
+
+#titlebarboxbackbutton{
+	height: 100%;
 }
 
 /* channels */
@@ -86,14 +92,12 @@ html, body{
 }
 
 .channelboxselected{
-	background-color: RGB(245,128,37);
 	opacity: 0.7;
 }
 
 #channelboximage{
 	width: 151px;
 	height: 85px;
-	background-color: RGB(245,128,37);
 	float: left;
 }
 
@@ -104,7 +108,7 @@ html, body{
 #channelboxname{
 	margin-left: 5%;
 	margin-top: 5%;
-	font-family: arial, helvetica;
+	font-family: frutiger;
 	font-size: 26px;
 	float: left;
 }
@@ -113,7 +117,6 @@ html, body{
 
 #preview{
 	clear:both;
-	background-color: RGB(245,128,37);
 	margin-top: 3%;
 	margin-left: 2%;
 	width: 80.5%;
@@ -130,7 +133,7 @@ html, body{
 	height: 100%;
 	overflow-x: scroll;
 	overflow-y: hidden;
-	background-color: white;
+	background-color: transparent;
 
 	border-color: white;
 }
@@ -149,7 +152,7 @@ html, body{
 
 ::-webkit-scrollbar-thumb {
     border-radius: 6px;
-    border: 2px solid RGB(245,128,37); /* should match background, can't be transparent */
+    border: 2px solid transparent; /* should match background, can't be transparent */
     background-color: white;
 }
 
@@ -164,7 +167,7 @@ html, body{
 .item{
 	height: 86px;
 	width: 158px;
-	margin-left: 5%;
+	margin-right: 5%;
 	margin-top: 5%;
 }
 
@@ -183,7 +186,6 @@ html, body{
 	height: 57%;
 	width: 82%;
 	float: left;
-	background-color: RGB(245,128,37);
 }
 
 #gallerybox{
@@ -209,7 +211,6 @@ html, body{
 }
 
 .progressbarboxfill{
-	background-color: RGB(245,128,37);
 	height: 100%;
 	width: 0%	
 }
